# shopify_distributed_ad_revenue

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  docker.sh
.github/workflows/: ci.yml
libs/lib-shopify/: Cargo.toml
libs/lib-shopify/src/kafka/: mod.rs  producer.rs
services/auth-api/: .gitignore  Cargo.toml  Dockerfile  README.md  reset_db.sh  setup_db.sh
services/auth-api/sql/: README.md
services/auth-api/sql/migrations/: 001_core_tenancy.sql  002_shopify_catalog.sql  003_orders.sql  004_users.sql
services/auth-api/src/: args.rs  main.rs
services/auth-api/src/auth/: jkws.rs  mod.rs
services/auth-api/src/http/: inventory.rs  merchants.rs  mod.rs  orders.rs  products.rs  types.rs  users.rs
services/auth-api/src/http/auth/: jwks.rs  login.rs  mod.rs
services/auth-api/src/http/cost/: ad_campaign.rs  mod.rs
services/auth-api/src/misc/: keypair.rs  mod.rs  validator.rs
services/cost-engine/: Cargo.toml
services/cost-engine/src/: main.rs
services/profit-engine/: Cargo.toml  README.md
services/profit-engine/docs/: Project Scope.docx  Shopify app-1 (2).docx
services/shopify-consumer/: Cargo.toml  Dockerfile  README.md
services/shopify-consumer/src/: main.rs
services/shopify-consumer/src/shopify/: client.rs  mod.rs  types.rs
