[package]
name = "auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7", features = ["json", "macros"] }
axum-extra = "0.4"
anyhow = "1.0.0"
lettre = { version = "0.10.0-rc.5", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "rust_decimal"] }
tokio = { version = "1.44", features = ["full"] }
totp-rs = "5.7.0"
tower = "0.5.2"
tower-http = {version = "0.6.6", features = ["cors", "trace", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
jsonwebtoken = "9.2"
base64 = "0.21"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rsa = "0.9"
random = "0.14"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "env"] }
thiserror = "1.0"
regex = "1.10"
rust_decimal = { version = "1.39", features = ["serde"] }
lib_shopify = { path = "../../libs/lib-shopify" }

