[package]
name = "cost_calculation_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
lib_shopify = { path = "../../libs/lib-shopify" }
tokio = { version = "1.48" , features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }
anyhow = "1.0.0"
rust_decimal = { version = "1.39", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
