[package]
name = "shopify_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.0"
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.44", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
rust_decimal = { version = "1.39", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
lib_shopify = { path = "../../libs/lib-shopify" }
rdkafka = { version = "0.38", features = [ "cmake-build"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tokio-cron-scheduler = "0.9"

